--- a/Tour/css/style.css
+++ b/Tour/css/style.css
@@ -1,14 +1,16 @@
 * {
     margin: 0;
     padding: 0;
+    font: normal 12px "Dotum";
 }
 
 ul,ol {list-style: none;}
 a {text-decoration: none; color: #111;}
 
+img {border: 0;}
+
 #wrapper {
     width: 100%;
-    height: auto;
 }
 
 header {
