--- a/Farmstory/css/style.css
+++ b/Farmstory/css/style.css
@@ -97,29 +97,13 @@
         overflow: hidden;
     }
 
-    .bx-viewport {
-        width: 100%;
-        overflow: hidden;
-        position: relative;
-        height: 312px;
-        -webkit-transform: translatez(0);
+    .bx-wrapper {
+        box-shadow: none;
+        border: none;
+        background: #fff;
+    
     }
-    .bx-viewport > ul {
-        width: 3215%;
-        position: relative;
-        transition-duration: 0s;
-        transform: translate3d(-2940px, 0px, 0px);
-    }
-    .bx-viewport > ul > li {
-        float: left;
-        list-style: none;
-        position: relative;
-        width: 980px;
-    }
-    .bx-viewport > ul > li > img {
-        max-width: 100%;
-        display: block;
-    }
+    
 
     main > .slider > img {
         position: absolute;
@@ -239,6 +223,53 @@
         line-height: 18px;
         color: #666;
     }
+
+    /* 탭 커스텀 */
+.ui-widget.ui-widget-content {
+    border: none;
+}
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br {
+    border-bottom-right-radius: 0px;
+}
+.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl {
+    border-bottom-left-radius: 0px;
+}
+.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr {
+    border-top-right-radius: 0px;
+}
+.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl {
+    border-top-left-radius: 0px;
+}
+.ui-widget-content {
+    border: none;
+    background: #ffffff;
+    color: #222222;
+}
+.ui-widget-header {
+    border: none;
+    border-bottom: 1px solid #aaaaaa;
+    background: none;
+    color: #222222;
+    font-weight: bold;
+}
+
+.ui-tabs .ui-tabs-nav {
+    margin: 0;
+    padding: 0;
+}
+
+.ui-tabs .ui-tabs-panel {
+    padding: 10px;
+}
+
+#tabs .txt > li {    
+    border-bottom: 1px solid #d1d1d1;
+    line-height: 26px;
+}
+
+#tabs .txt > li > a {
+    color: #666;
+}
 
     /* 푸터 */
     footer {
