--- a/Kmarket1/css/common.css
+++ b/Kmarket1/css/common.css
@@ -196,6 +196,13 @@
       text-decoration: underline;
   }
 
+  main > section {
+    float: right;
+    width: 985px;
+    height: auto;
+    box-sizing: border-box;
+}
+
   /* 푸터 */
   footer {
       width: 100%;
