--- a/HangOut/css/index.css
+++ b/HangOut/css/index.css
@@ -38,39 +38,113 @@ header {
 }
 
 header > div {
-  position: relative;
   width: 100%;
   box-sizing: border-box;
 }
 
 header > .logo img {
-  position: absolute;
-  top: 30px;
-  left: 50px;
+  padding-top: 50px;
+  padding-left: 200px;
   width: 200px;
 }
 
 main {
-  width: 1200px;
+  min-width: 1200px;
+  width: 100%;
   height: auto;
-  text-align: center;
+  min-height: 800px;
   margin: 0 auto;
-  border: 1px solid green;
-  padding-top: 80px;
+  padding-top: 150px;
 }
 
-main > div {
-  padding-top: 40px;
+main > section {
+  margin: 0 auto;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+}
+
+main > section > section {
+  width: 100%;
+  height: auto;
+}
+
+main > section > .login {
   width: 1000px;
-  height: 800px;
+  height: 600px;
   margin: 0 auto;
-  border: 1px solid red;
+  border: none;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+main > section > .login h3 {
+  margin-top: 70px;
+  font-size: 40px;
+  color: #0d4e31;
 }
 
+main > section > .login .form {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 50px;
+}
+.login input {
+  display: block;
+  width: 550px;
+  height: 60px;
+  margin-bottom: 5px;
+  padding: 5px;
+  text-indent: 10px;
+  border: 1px solid #c6e0bf;
+}
+.login input:nth-of-type(1) {
+  margin-top: 30px;
+  margin-bottom: 15px;
+  font-size: 20px;
+}
+.login input:nth-of-type(2) {
+  font-size: 20px;
+  margin-bottom: 60px;
+}
+
+.login input:nth-of-type(3) {
+  width: 565px;
+  height: 80px;
+  background-color: #4fc58e;
+  border: none;
+  color: white;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.login input:nth-of-type(3):hover {
+  background-color: #33835e;
+  cursor: pointer;
+}
+
+.login .menu {
+  margin-top: 40px;
+  line-height: 10px;
+}
+
+.login .menu li:nth-child(1) {
+  font-size: 22px;
+  margin-bottom: 30px;
+}
+.login .menu li:nth-child(2) {
+  margin-bottom: 10px;
+  font-size: 22px;
+}
+.login .menu li a:hover {
+  color: #0d4e31;
+  font-weight: bold;
+}
 footer {
   margin-top: 100px;
-  height: 180px;
-  background: #b4e8e3;
+  height: 100px;
+  background: #ceebde;
   padding: 43px 0 75px;
 }
 .footer-col:first-child {
@@ -89,7 +163,7 @@ footer {
   padding: 8px;
   line-height: 0.8;
   font-size: 17px;
-  color: #10958b;
+  color: #0d4e31;
   font-weight: 300;
 }
 .info li:first-child {
@@ -108,95 +182,8 @@ footer {
   line-height: 1;
   font-family: bold;
   font-size: 17px;
-  color: #10958b;
+  color: #0d4e31;
   font-weight: 700;
   padding: 2px;
   margin: 0 2px 10px;
-}
-
-/* login */
-.login_main {
-  width: 100%;
-  width: 750px;
-  min-height: 750px;
-  margin: 0 auto;
-}
-
-input[id="naver"]:hover {
-  background: #007aff;
-}
-
-input[id="kakao"]:hover {
-  background: #007aff;
-}
-
-input[id="apple"]:hover {
-  background: #007aff;
-}
-
-.login_main {
-  display: flex;
-  justify-content: center;
-}
-
-.login {
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  padding-top: 50px;
-}
-
-.login_form {
-  margin-right: 50px;
-}
-
-.login_div {
-  text-align: center;
-}
-
-.login {
-}
-
-.login > .main_first {
-}
-
-.login > .main_first > h2 {
-  font-size: 25px;
-  font-weight: bold;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-.login > .main_first > .main_second {
-  padding: 80px;
-  margin-left: 80px;
-}
-
-.login div > .main_second > form {
-}
-
-.login div > .main_second > form > input {
-  display: block;
-  width: 450px;
-  height: 40px;
-  margin-bottom: 5px;
-  padding: 5px;
-  text-indent: 10px;
-  border: 1px solid #e5e5e5;
-}
-
-.login div > .main_second > form > input:nth-of-type(1) {
-  margin-bottom: 8px;
-  font-size: 16px;
-}
-
-.login div > .main_second > form > input:nth-of-type(2) {
-  font-size: 16px;
-}
-
-.login div > .main_second > form div {
-  position: relative;
-  width: 100%;
-  height: 20px;
-  margin-top: 30px;
 }
