--- a/HangOut_HTML/css/member.css
+++ b/HangOut_HTML/css/member.css
@@ -33,9 +33,9 @@ button {
 /* 헤더 */
 header {
   min-width: 1200px;
-  width: 100%;
+  width: 1800px;
   height: 105px;
-  position: relative;
+  margin: 0 auto;
 }
 
 header > div {
@@ -46,8 +46,8 @@ header > div {
 
 header > .logo img {
   position: absolute;
-  top: 50px;
-  left: 200px;
+  top: 20px;
+  left: 100px;
   width: 200px;
 }
 
@@ -142,6 +142,7 @@ footer {
   height: 200px;
   padding: 10px;
   border: 1px solid #cfcece;
+  font-size: 20px;
 }
 
 .terms-check {
@@ -325,7 +326,7 @@ input[name="addr2"] {
 }
 
 /* 아이디 찾기 */
-.findId {
+.find {
   min-width: 1200px;
   width: 100%;
   height: auto;
@@ -333,19 +334,26 @@ input[name="addr2"] {
   margin: 0 auto;
   padding-top: 120px;
 }
-.findId > .div {
+.find > .div {
   width: 1200px;
   height: auto;
   margin: 0 auto;
   text-align: center;
 }
 
-.findId .top {
+.find > div {
+  width: 1200px;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.find .top {
   font-size: 40px;
   margin: 0 auto;
 }
 
-.findId .id {
+.find .id {
   padding: 70px;
   width: 900px;
   height: 300px;
@@ -355,7 +363,7 @@ input[name="addr2"] {
   font-size: 20px;
 }
 
-.findId input {
+.find .id input {
   margin-top: 25px;
   width: 600px;
   height: 70px;
@@ -363,17 +371,175 @@ input[name="addr2"] {
   font-size: 20px;
   margin-bottom: 40px;
 }
-.findId .result {
+.find .result {
   width: 900px;
   height: 100px;
   margin: 0 auto;
   padding-top: 20px;
-  margin-left: 200px;
-  float: left;
+  margin-left: 100px;
+  text-align: left;
 }
-.findId p {
+.find p {
   width: 600px;
-  margin: 0 auto;
   float: left;
+  font-size: 23px;
+}
+
+.find .button {
+  width: 900px;
+  height: auto;
+  margin: 0 auto;
+}
+
+.popup {
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+.popup.on {
+  display: block;
+}
+.popup > div {
+  display: table;
+  width: 40%;
+  margin: 0 auto;
+  margin-top: 200px;
+  background: #fff;
+  padding-top: 0;
+}
+
+.popup > div > nav {
+  width: 100%;
+  height: 80px;
+  padding: 10px;
+  box-sizing: border-box;
+  background: #52ad78;
+  overflow: hidden;
+}
+.popup > div > nav > h1 {
+  float: left;
+  margin-top: 10px;
+  margin-left: 10px;
+  font-size: 25px;
+  color: white;
+}
+.popup > div > nav > button {
+  float: right;
+  width: 60px;
+  height: 30px;
+  background-color: transparent;
+  background-position: 227px -25px;
+  border: none;
+  font-size: 30px;
+  color: white;
+  cursor: pointer;
+  margin-top: 8px;
+}
+.popup > div > p {
+  padding: 16px;
+  box-sizing: border-box;
+  font-size: 25px;
+}
+
+.find > form table {
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  table-layout: fixed;
+  border-top: 1px solid #b6bdc7;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.find table tr > td {
+  padding: 20px;
+  border: 1px solid #e9e9e9;
+  box-sizing: border-box;
+  font-size: 24px;
+}
+
+.find > form table tr > td:nth-child(1) {
+  width: 270px;
+  height: 100px;
+  font-size: 24px;
+}
+.find table tr > td:nth-child(2) {
+  font-weight: bold;
+}
+
+.findPwChange table input {
+  width: 350px;
+  height: 60px;
+  border: 1px solid #e4eaec;
+  background: #f7f7f7;
+  text-indent: 13px;
+  font-size: 22px;
+}
+
+.find table div {
+  margin-top: 4px;
+}
+
+.find > form > p {
+  margin-top: 40px;
+  padding-left: 20px;
+  margin-bottom: 12px;
+  line-height: 30px;
   font-size: 20px;
+  margin-left: 10px;
+}
+
+.find > form .btn {
+  margin-top: 200px;
+  text-align: center;
+}
+
+.findPwChange table tr > td:nth-child(1) {
+  width: 180px;
+}
+
+.find > form .btn > .popCancel {
+  display: inline-block;
+  width: 170px;
+  height: 60px;
+  text-align: center;
+  line-height: 58px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  font-weight: 500;
+  font-size: 20px;
+  box-sizing: border-box;
+  margin-left: 37px;
+  margin-right: 37px;
+  margin-top: 4px;
+}
+.find > form .popCancel:hover {
+  background-color: #f7f7f7;
+}
+
+.find > form .btn > .popNext {
+  padding: 7px 20px;
+  display: inline-block;
+  width: 170px;
+  height: 60px;
+  text-align: center;
+  line-height: 36px;
+  background-color: #419707;
+  border: 1px solid #419707;
+  border-radius: 2px;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+  cursor: pointer;
+  box-sizing: border-box;
+}
+
+.find > form .btn > .popNext:hover {
+  background-color: #036dde;
 }
