--- a/HangOut_HTML/css/search.css
+++ b/HangOut_HTML/css/search.css
@@ -124,148 +124,13 @@ main > section {
   box-sizing: border-box;
 }
 
-.friend {
+.search {
   position: absolute;
   top: 20px;
   left: 100px;
   width: 500px;
   height: 850px;
   border: 1px solid #c2c1c1;
-}
-
-.friend h3 {
-  font-size: 35px;
-  margin: 18px;
-}
-.friend a {
-  font-size: 20px;
-  float: right;
-  margin-top: -53px;
-  margin-right: 240px;
-}
-
-.friend ul {
-  margin: 10px;
-  padding-top: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: left; /* this centers the items vertically */
-  align-items: left;
-}
-
-.friend ul > li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 50px;
-}
-
-.friend ul > li p {
-  margin-left: 50px;
-  font-size: 27px;
-}
-.friend ul > li img:nth-of-type(2) {
-  margin-left: 150px;
-  font-size: 24px;
-}
-
-.message {
-  position: absolute;
-  top: 20px;
-  left: 700px;
-  width: 900px;
-  height: 300px;
-  border: 1px solid #c2c1c1;
-}
-
-.message h3 {
-  font-size: 35px;
-  margin: 18px;
-}
-.message a {
-  font-size: 20px;
-  float: right;
-  margin-top: -53px;
-  margin-right: 705px;
-}
-
-.message ul {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: left; /* this centers the items vertically */
-  align-items: left;
-}
-
-.message ul > li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-bottom: 1px solid #c2c1c1;
-  height: 70px;
-}
-
-.message ul > li:last-child {
-  border: none;
-}
-
-.message ul > li > a {
-  font-size: 24px;
-  float: right;
-  margin-top: 0px;
-  margin-right: 0px;
-  margin-left: 10px;
-}
-
-.community {
-  position: absolute;
-  top: 420px;
-  left: 700px;
-  width: 900px;
-  height: 450px;
-  border: 1px solid #c2c1c1;
-}
-
-.community h3 {
-  font-size: 35px;
-  margin: 18px;
-}
-.community h3 strong {
-  color: rgb(207, 6, 6);
-}
-.community a {
-  font-size: 20px;
-  float: right;
-  margin-top: -53px;
-  margin-right: 555px;
-}
-
-.community ul {
-  margin: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: left; /* this centers the items vertically */
-  align-items: left;
-}
-
-.community ul > li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-bottom: 1px solid #c2c1c1;
-  height: 70px;
-}
-
-.community ul > li:last-child {
-  border: none;
-}
-
-.community ul > li > a {
-  font-size: 24px;
-  float: right;
-  margin-top: 0px;
-  margin-right: 0px;
-  margin-left: 10px;
 }
 
 footer {
